--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvTitleApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -19,26 +19,26 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvSubTilteApp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
         android:layout_marginTop="8dp"
         android:text="Calculadora empréstimo consignável"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintEnd_toEndOf="@+id/tvTitleApp"
+        app:layout_constraintStart_toStartOf="@+id/tvTitleApp"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitleApp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivIconPrincipal"
         android:layout_width="0dp"
         android:layout_height="250dp"
         android:layout_marginTop="50dp"
         android:scaleType="fitXY"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="@+id/tvSubTilteApp"
+        app:layout_constraintStart_toStartOf="@+id/tvSubTilteApp"
+        app:layout_constraintTop_toBottomOf="@+id/tvSubTilteApp"
         app:srcCompat="@drawable/calculadoracoindolar" />
 
     <ImageView
@@ -47,8 +47,8 @@
         android:layout_height="78dp"
         android:layout_marginTop="60dp"
         android:scaleType="fitXY"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/ivIconPrincipal"
+        app:layout_constraintTop_toBottomOf="@+id/ivIconPrincipal"
         app:srcCompat="@drawable/btncalculadora" />
 
     <ImageView
@@ -58,13 +58,13 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="60dp"
         android:scaleType="fitXY"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/ivIconPrincipal"
         app:layout_constraintStart_toEndOf="@+id/btnMargemConsignado"
-        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/ivIconPrincipal"
         app:srcCompat="@drawable/btncalculadora" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvInputMargemConsig"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Calculadora Margem Consignádo"
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btnMargemConsignado" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvInputFGTS"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="FGTS"
@@ -90,17 +90,17 @@
         app:layout_constraintTop_toBottomOf="@+id/btnFGTS" />
 
     <ImageView
-        android:id="@+id/imageButton5"
+        android:id="@+id/btn13Salario"
         android:layout_width="89dp"
         android:layout_height="78dp"
         android:layout_marginTop="24dp"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="@+id/btnMargemConsignado"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/tvInputMargemConsig"
         app:srcCompat="@drawable/btncalculadora" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvInput13Salario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cálculadora 13° Salário"
@@ -108,23 +108,23 @@
         android:textColor="#0E0E0E"
         android:textSize="10sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
-        app:layout_constraintStart_toStartOf="@+id/imageButton5"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton5" />
+        app:layout_constraintEnd_toEndOf="@+id/btn13Salario"
+        app:layout_constraintStart_toStartOf="@+id/btn13Salario"
+        app:layout_constraintTop_toBottomOf="@+id/btn13Salario" />
 
     <ImageView
-        android:id="@+id/imageButton6"
+        android:id="@+id/btnSimulador"
         android:layout_width="89dp"
         android:layout_height="78dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="24dp"
         android:scaleType="fitXY"
-        app:layout_constraintStart_toEndOf="@+id/imageButton5"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/btn13Salario"
+        app:layout_constraintTop_toBottomOf="@+id/tvInputMargemConsig"
         app:srcCompat="@drawable/btncalculadora" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/tvInputSimulador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Simulador"
@@ -132,8 +132,8 @@
         android:textColor="#020202"
         android:textSize="10sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
-        app:layout_constraintStart_toStartOf="@+id/imageButton6"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />
+        app:layout_constraintEnd_toEndOf="@+id/btnSimulador"
+        app:layout_constraintStart_toStartOf="@+id/btnSimulador"
+        app:layout_constraintTop_toBottomOf="@+id/btnSimulador" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
