--- a/app/src/main/res/layout/activity_tela_calculadora_de_margem.xml
+++ b/app/src/main/res/layout/activity_tela_calculadora_de_margem.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Calc_Margem_Activity">
+    tools:context=".TelaCalculadoraDeMargem">
 
     <View
         android:id="@+id/bgTitleTop"
